--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -17,21 +17,16 @@
    },
    "outputs": [],
    "source": [
-    "# Core libraries\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "# Data visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Set default Seaborn style\n",
     "sns.set(style=\"whitegrid\")\n",
     "\n",
-    "# Optional: For displaying plots inline in Jupyter notebooks\n",
     "%matplotlib inline\n",
     "\n",
-    "# To ignore warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -68,7 +63,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Load both files\n",
     "normal = pd.read_csv('data/ptbdb_normal.csv', header=None)\n",
     "abnormal = pd.read_csv('data/ptbdb_abnormal.csv', header=None)\n"
    ]
@@ -542,22 +536,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combine and shuffle\n",
+    "\n",
     "df = pd.concat([normal, abnormal], ignore_index=True)\n",
     "df = shuffle(data).reset_index(drop=True)\n",
     "\n",
-    "# Features and labels\n",
-    "X = data.iloc[:, :-1].values  # ECG values\n",
-    "y = data.iloc[:, -1].values   # 0 or 1"
+    "X = data.iloc[:, :-1].values\n",
+    "y = data.iloc[:, -1].values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eea7cdd4-767c-46b3-9442-101a75d82c06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -651,16 +636,12 @@
     }
    ],
    "source": [
-    "# Check data types and basic info\n",
-    "df_info = df.info()\n",
     "\n",
-    "# Check for missing values in each column\n",
+    "df_info = df.info()\n",
     "missing_values = df.isnull().sum()\n",
     "\n",
-    "# Find columns with missing data\n",
     "missing_columns = missing_values[missing_values > 0]\n",
     "\n",
-    "# Display the results\n",
     "print(\"Data types and basic info:\")\n",
     "print(df_info)\n",
     "\n",
@@ -698,10 +679,9 @@
     }
    ],
    "source": [
-    "# Find and count unique values in each column\n",
+    "\n",
     "unique_values_count = df.nunique()\n",
     "\n",
-    "# Display the unique values count per column\n",
     "print(\"Unique values count per column:\")\n",
     "print(unique_values_count)\n"
    ]
@@ -749,14 +729,11 @@
     }
    ],
    "source": [
-    "# Generate column names for the DataFrame\n",
-    "column_names = [f'feature_{i}' for i in range(1, df.shape[1])]  # For all feature columns\n",
-    "column_names.append('target')  # Last column is the target\n",
+    "column_names = [f'feature_{i}' for i in range(1, df.shape[1])] \n",
+    "column_names.append('target') \n",
     "\n",
-    "# Rename the columns\n",
     "df.columns = column_names\n",
     "\n",
-    "# Display the first few rows to verify the renaming\n",
     "print(df.head())\n"
    ]
   },
@@ -767,14 +744,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data into features (X) and target (y)\n",
+    "\n",
     "X = df.drop(columns=['target'])\n",
     "y = df['target']\n",
     "\n",
-    "# Split into train and test sets (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Initialize StandardScaler for standardization\n",
     "scaler = StandardScaler()"
    ]
   },
